Thu Feb  8 21:57:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* mmap.cc (class list): Add member `hash'.
	(list::list): Initialize `hash'.
	(list::get_list_by_fd): Use filepath hash value to get the correct
	mapping list if it's not an anonymous mapping.
	(map::add_list): Initialize `hash' with filepath hash value.
	(mmap): Check for reusing a mapping only on MAP_SHARED.

Wed Feb  7 18:47:36 2001  Christopher Faylor <cgf@cygnus.com>

	* signal.cc (killpg): Correct first argument.

Wed Feb  7 22:22:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* autoload.cc: Add LoadDLLinitfunc for iphlpapi.dll.
	Add LoadDLLfuncEx statements for GetIfTable@12 and GetIpAddrTable@12.
	* fhandler_socket.cc (fhandler_socket::ioctl): Move variable
	definitions to the beginning of the function to allow better debugging.
	Add handling for SIOCGIFHWADDR, SIOCGIFMETRIC and SIOCGIFMTU.
	* net.cc: Include iphlpapi.h.
	(get_2k_ifconf): Rewritten. Uses IP Helper API now.
	(get_nt_ifconf): Add handling for SIOCGIFHWADDR, SIOCGIFMETRIC
	and SIOCGIFMTU.
	(get_95_ifconf): Ditto. Renamed from `get_9x_ifconf'.
	(get_ifconf): Name loopback `lo' instead of `lo0' as in Linux.
	Add handling for SIOCGIFHWADDR, SIOCGIFMETRIC and SIOCGIFMTU.
	Call `get_95_ifconf' only on Windows 95, `get_nt_ifconf' only
	on Windows NT < Service Pack 3, `get_2k_ifconf otherwise.
	* include/asm/socket.h: Add defines for SIOCGIFHWADDR, SIOCGIFMETRIC
	and SIOCGIFMTU.
	* include/cygwin/if.h: Add `ifr_hwaddr', `ifr_metric' and `ifr_mtu'.
	(struct ifreq): Add `ifru_hwaddr'.

Tue Feb  6 15:04:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* syscalls.cc (stat_worker): Add a check for the special case when
	a process creates a file using mode 000 using ntsec.

Mon Feb  5 17:00:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Always add GENERIC_READ access
	when opening raw disk devices.
	* fhandler_floppy.cc (fhandler_dev_floppy::lseek): Implement bytewise
	access.